--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,5 +5,8 @@
 main{
   width: 100%;
   min-height: calc(100vh - 3rem);
-  padding-top: 3rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
